<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Md. Rabiul Ali Sarker, Software Developer, IT, SQ Group
  ~  * Created on on 8/24/20 4:32 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 8/24/20 4:21 PM
  ~  */
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="2dp"
            android:text="@string/login_head_line"
            android:textColor="@color/color_black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="10dp"
            android:text="@string/application_login_subhead"
            android:textColor="@color/color_black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black"
                android:ems="10"
                android:hint="ID"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/color_black"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/company_title"
            android:textColor="@color/color_black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@android:drawable/ic_popup_sync" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_last_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_tab_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>