<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Md. Rabiul Ali Sarker, Software Developer, IT, SQ Group
  ~  * Created on on 8/5/20 3:53 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 8/5/20 3:52 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".FloorInfoActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/floor_info_header"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/production_unit"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg"
                    android:padding="15dp">

                    <!--                    <TextView
                                            android:id="@+id/tv_production_unit"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:dropDownWidth="match_parent"
                                            tools:text="Sample" />-->
                    <Spinner
                        android:id="@+id/sp_production_unit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:dropDownWidth="match_parent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/module"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_module"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:dropDownWidth="match_parent"
                        tools:text="Sample" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="KQC Table"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg"
                    android:padding="15dp">

                    <Spinner
                        android:id="@+id/sp_line"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:dropDownWidth="match_parent" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_scan"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_bg"
                android:padding="10dp"
                android:text="@string/scan"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/bt_logout"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="@string/logout"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bt_set_floor"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_bg"
                    android:padding="10dp"
                    android:text="MANUAL"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_last_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="5dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>